--- a/ANTsRegistration/Resources/UI/ANTsRegistration.ui
+++ b/ANTsRegistration/Resources/UI/ANTsRegistration.ui
@@ -813,6 +813,24 @@
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_5">
           <item>
+           <layout class="QHBoxLayout" name="horizontalLayout">
+            <item>
+             <widget class="QPushButton" name="removeButton">
+              <property name="text">
+               <string>Remove Selected Path</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="bumpButton">
+              <property name="text">
+               <string>Move Path to Top</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
            <widget class="QListWidget" name="inputFileListWidget">
             <property name="dragEnabled">
              <bool>true</bool>
